# visusyssol

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: BloomRender.h  Buffer.h  Camera.h  FPSManager.h  FreeflyCamera.hpp  Geometry.h  GeometryFactory.h  MousePicking.h  Planet.h  PlanetFactory.h  Presentation.h  Render.h  RenderFactory.h  Scene.h  Shader.h  TextRendering.h  TextureRender.h  TrackballCamera.h  Window.h
app/shaders/: 3D.vs.glsl  3D_color.vs.glsl  Colored.fs.glsl  Colored_directionallight.fs.glsl  atmo.fs.glsl  directionallight.fs.glsl  oneColor.fs.glsl  pointlight.fs.glsl  ring.fs.glsl  screen_final.fs.glsl  screen_trait.fs.glsl  screen_trait.vs.glsl  skybox.fs.glsl  sun.fs.glsl  text.fs.glsl  text.vs.glsl
app/src/: BloomRender.cpp  Buffer.cpp  FPSManager.cpp  FreeflyCamera.cpp  Geometry.cpp  GeometryFactory.cpp  MousePicking.cpp  Planet.cpp  PlanetFactory.cpp  Render.cpp  Shader.cpp  TextRendering.cpp  TextureRender.cpp  TrackballCamera.cpp  Window.cpp  main.cpp
assets/solar_system/: asteroid.planet  sun.planet
assets/solar_system/sun_satellites/: earth.planet  jupyter.planet  mars.planet  mercury.planet  neptune.planet  pluto.planet  saturn.planet  uranus.planet  venus.planet
docs/working_stuff/: Archi.mdj  archi.blend  archi.blend1  rapport.aux  rapport.tex  rapport.toc
glimac/include/glimac/: Cube.hpp  SDLWindowManager.hpp  Sphere.hpp
glimac/src/: Cube.cpp  Geometry.cpp  Image.cpp  SDLWindowManager.cpp  tiny_obj_loader.cpp
